Fixed modal spacing

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -289,7 +289,7 @@ body.active-modal {
   max-width: 900px;
   min-width: 600px;
   margin-bottom: 100px;
-  max-height: 80%;
+  max-height: 82%;
   overflow-y: auto;
 }
 .close-modal {
